// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<section
  className="hero__Container-sc-qftwzr-0 SSTCg"
  data-cy="test-hero"
>
  <div
    className="hero___StyledDiv-sc-qftwzr-4 jLqjvX"
  >
    <div
      className="hero___StyledDiv2-sc-qftwzr-5 gktQuS"
    >
      <p
        className="hero___StyledP-sc-qftwzr-7 ebNrDP"
      >
        Instrument
      </p>
      <h1>
        2D-C/P
         
        2D-C/P Hydrometeor Imaging Probe
      </h1>
    </div>
    <div
      className="hero___StyledDiv3-sc-qftwzr-8 hIojD"
    >
      <p>
        The 2DC probe records images of hydrometeors...
      </p>
      <div
        className="typeahead-box___StyledDiv-sc-1kp6jj-0 cPODA-D"
      >
        <div
          className="typeahead-box___StyledDiv2-sc-1kp6jj-1 iFJQHR"
        >
          <span
            aria-label="Magnifying glass icon"
            role="img"
          >
            <svg
              height="16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="none"
                height="16"
                width="16"
              />
              <path
                d="M15.708,13.587l-3.675-3.675C12.646,8.92,13,7.751,13,6.5C13,2.91,10.09,0,6.5,0S0,2.91,0,6.5S2.91,13,6.5,13 c1.251,0,2.42-0.354,3.412-0.967l3.675,3.675c0.389,0.389,1.025,0.389,1.414,0l0.707-0.707 C16.097,14.612,16.097,13.976,15.708,13.587z M3.318,9.682C2.468,8.832,2,7.702,2,6.5s0.468-2.332,1.318-3.182S5.298,2,6.5,2 s2.332,0.468,3.182,1.318C10.532,4.168,11,5.298,11,6.5s-0.468,2.332-1.318,3.182C8.832,10.532,7.702,11,6.5,11 S4.168,10.532,3.318,9.682z"
                fill="#e9eaec"
              />
            </svg>
          </span>
          <input
            className="typeahead-box___StyledInput-sc-1kp6jj-2 gMWVIC"
            onChange={[Function]}
            placeholder="Enter a campaign, platform, or instrument"
            type="text"
            value=""
          />
        </div>
        <div
          className="type-ahead-dropdown"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`Header renders with adjust ratios 1`] = `
<section
  className="hero__Container-sc-qftwzr-0 SSTCg"
  data-cy="undefined-hero"
>
  <div
    className="hero___StyledDiv-sc-qftwzr-4 cMgrSf"
  >
    <div
      className="hero___StyledDiv2-sc-qftwzr-5 gktQuS"
    >
      <p
        className="hero___StyledP-sc-qftwzr-7 ebNrDP"
      >
        Instrument
      </p>
      <h1>
        2D-C/P
         
        2D-C/P Hydrometeor Imaging Probe
      </h1>
    </div>
    <div
      className="hero___StyledDiv3-sc-qftwzr-8 hIojD"
    >
      <p>
        The 2DC probe records images of hydrometeors...
      </p>
      <div
        className="typeahead-box___StyledDiv-sc-1kp6jj-0 cPODA-D"
      >
        <div
          className="typeahead-box___StyledDiv2-sc-1kp6jj-1 iFJQHR"
        >
          <span
            aria-label="Magnifying glass icon"
            role="img"
          >
            <svg
              height="16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="none"
                height="16"
                width="16"
              />
              <path
                d="M15.708,13.587l-3.675-3.675C12.646,8.92,13,7.751,13,6.5C13,2.91,10.09,0,6.5,0S0,2.91,0,6.5S2.91,13,6.5,13 c1.251,0,2.42-0.354,3.412-0.967l3.675,3.675c0.389,0.389,1.025,0.389,1.414,0l0.707-0.707 C16.097,14.612,16.097,13.976,15.708,13.587z M3.318,9.682C2.468,8.832,2,7.702,2,6.5s0.468-2.332,1.318-3.182S5.298,2,6.5,2 s2.332,0.468,3.182,1.318C10.532,4.168,11,5.298,11,6.5s-0.468,2.332-1.318,3.182C8.832,10.532,7.702,11,6.5,11 S4.168,10.532,3.318,9.682z"
                fill="#e9eaec"
              />
            </svg>
          </span>
          <input
            className="typeahead-box___StyledInput-sc-1kp6jj-2 gMWVIC"
            onChange={[Function]}
            placeholder="Enter a campaign, platform, or instrument"
            type="text"
            value=""
          />
        </div>
        <div
          className="type-ahead-dropdown"
        />
      </div>
    </div>
  </div>
</section>
`;
